6
I can't even fathom why I'm being this diligent on a 3-year old -Xresident bug, but I did completely reproduce this all the way up to it not crashing.  Thus do I declare it fixed.
{code}
scalac -Xresident -sourcepath . -d ./bin -classpath bin

nsc> scala/tools/eclipse/Driver.scala 

nsc> scala/tools/eclipse/Driver.scala 
scala/tools/eclipse/Driver.scala:4: error: illegal cyclic inheritance involving trait ProjectImpl
  abstract class Project extends ProjectImpl
                 ^

nsc> scala/tools/eclipse/Driver.scala
scala/tools/eclipse/Driver.scala:4: error: illegal cyclic inheritance involving trait ProjectImpl
  abstract class Project extends ProjectImpl
                 ^

{code}
